--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,11 @@
 [[redirects]]
-  from = "/*"
-  to = "/index"
+  from = "/jobs"
+  to = "/jobs"
+# [[redirects]]
+#   from = "/*"
+#   to = "/index"
+[[redirects]]
+  from = "/about-us"
+  to = "/about-us"
 [build.environment]
   NODE_VERSION = "v14.9.0"
