--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [[redirects]]
   from = "/jobs"
   to = "/jobs"
-# [[redirects]]
-#   from = "/*"
-#   to = "/index"
+[[redirects]]
+  from = "/*"
+  to = "/index"
 [[redirects]]
   from = "/about-us"
   to = "/about-us"
