--- a/package.json
+++ b/package.json
@@ -2,26 +2,21 @@
   "name": "marketing-website",
   "version": "0.1.0",
   "private": true,
-  "husky": {
-		"hooks": {
-			"commit-msg": "commitlint -E  HUSKY_GIT_PARAMS"
-		}
-	},
-	"commitlint": {
-		"extends": [
-			"@commitlint/config-conventional"
-		],
-		"rules": {
-			"subject-case": [
-				2,
-				"never",
-				[
-					"start-case",
-					"pascal-case"
-				]
-			]
-		}
-	},
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "subject-case": [
+        2,
+        "never",
+        [
+          "start-case",
+          "pascal-case"
+        ]
+      ]
+    }
+  },
   "dependencies": {
     "@typeform/embed-react": "^1.9.0",
     "classnames": "^2.2.6",
@@ -31,17 +26,15 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-		"@commitlint/config-conventional": "^11.0.0",
-		"@semantic-release/git": "^9.0.0",
-		"commitlint": "^11.0.0",
-		"husky": "^4.3.0",
-		"standard-version": "^9.0.0"
+    "@semantic-release/git": "^9.0.0",
+    "standard-version": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,5 +51,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^11.0.0",
+    "husky": "^7.0.4"
+  }
 }
