--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "@semantic-release/git": "^9.0.0",
     "@typeform/embed-react": "^1.9.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
@@ -26,13 +27,12 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "@semantic-release/git": "^9.0.0",
     "standard-version": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cucumber-js test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^11.0.0",
+    "@cucumber/cucumber": "^7.3.2",
     "husky": "^7.0.4"
   }
 }
