--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "standard-version": "^9.0.0"
+    "standard-version": "^9.0.0",
+    "@cucumber/cucumber": "^7.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,7 +55,6 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^11.0.0",
-    "@cucumber/cucumber": "^7.3.2",
     "husky": "^7.0.4"
   }
 }
