ci: edited cucumber testing invoke

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cucumber-js test",
+    "test": "react-scripts test",
+    "test-e2e": "./node_modules/.bin/cucumber-js tests/ --exit",
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
