--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: '14'
       - run: npm install -v
-      - run: npm run test
+      - run: npm run test-e2e
