--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,5 +11,21 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm install --verbose
-      - run: npm run test-e2e
+
+      - run: npm ci
+
+      - name: Caching nodeJS
+        uses: actions/cache@v2
+        id: npm-cache
+        with:
+          path: | 
+            ~/.npm
+            ./node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+        
+      - name: Test Code
+        uses: mujo-code/puppeteer-headful@12.3.1
+        with:
+          args: npm run test-e2e
