--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,6 +11,7 @@ jobs:
       CI: 'true'
     steps:
       - uses: actions/checkout@v2
+      
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
@@ -31,4 +32,4 @@ jobs:
       - name: Test Code
         uses: mujo-code/puppeteer-headful@12.3.1
         with:
-          args: npm test-e2e
+          args: npm run test-e2e
