--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,6 +11,8 @@ jobs:
       CI: 'true'
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - uses: actions/setup-node@v2
         with:
@@ -32,4 +34,4 @@ jobs:
       - name: Test Code
         uses: mujo-code/puppeteer-headful@12.3.1
         with:
-          args: test-e2e
+          args: npm run test-e2e
