--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-          args: install
 
       - name: Caching nodeJS
         uses: actions/cache@v2
@@ -29,8 +28,9 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
+
+      - run: npm install
         
       - name: Test Code
         uses: mujo-code/puppeteer-headful@12.3.1
-        with:
-          args: npm run test-e2e
+        run: npm run test-e2e
