--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,7 +29,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npm install
+      - run: npm ci --only=production --ignore-scripts
 
       - name: Puppeteer Enablement
         uses: mujo-code/puppeteer-headful@12.3.1
