ci: update ci steps for Husky

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -34,7 +34,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-          npm install
+          npm ci --only=production --ignore-scripts
           npm install @semantic-release/exec -D
           npm install @semantic-release/changelog -D
           npm install @semantic-release/github -D
