--- a/package.json
+++ b/package.json
@@ -18,18 +18,15 @@
     }
   },
   "dependencies": {
-    "@cucumber/cucumber": "^7.3.2",
     "@semantic-release/git": "^9.0.0",
     "@typeform/embed-react": "^1.9.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
-    "puppeteer": "^13.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "standard-version": "^9.0.0"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,7 +53,10 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
+    "@cucumber/cucumber": "^7.3.2",
+    "puppeteer": "^13.5.1",
     "@commitlint/config-conventional": "^11.0.0",
-    "husky": "^7.0.4"
+    "husky": "^7.0.4",
+    "standard-version": "^9.0.0"
   }
 }
