--- a/package.json
+++ b/package.json
@@ -18,23 +18,25 @@
     }
   },
   "dependencies": {
+    "@cucumber/cucumber": "^7.3.2",
     "@semantic-release/git": "^9.0.0",
     "@typeform/embed-react": "^1.9.0",
     "classnames": "^2.2.6",
+    "cucumber": "^7.0.0-rc.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "puppeteer": "^13.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "standard-version": "^9.0.0",
-    "@cucumber/cucumber": "^7.3.2"
+    "standard-version": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test-e2e": "./node_modules/.bin/cucumber-js tests/ --exit",
+    "test-e2e": "./node_modules/.bin/cucumber-js test/ --exit",
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
