--- a/package.json
+++ b/package.json
@@ -18,14 +18,11 @@
     }
   },
   "dependencies": {
-    "@cucumber/cucumber": "^7.3.2",
     "@semantic-release/git": "^9.0.0",
     "@typeform/embed-react": "^1.9.0",
     "classnames": "^2.2.6",
-    "cucumber": "^7.0.0-rc.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
-    "puppeteer": "^13.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
@@ -61,6 +58,7 @@
     "chromedriver": "^99.0.0",
     "husky": "^7.0.4",
     "puppeteer": "^13.5.1",
-    "standard-version": "^9.0.0"
+    "standard-version": "^9.0.0",
+    "@cucumber/cucumber": "^7.3.2"
   }
 }
