--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,14 +22,14 @@ jobs:
         uses: actions/cache@v2
         id: npm-cache
         with:
-          path: | 
+          path: |
             ~/.npm
             ./node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npm ci --ignore-scripts
+      - run: npm install --ignore-scripts
 
       - name: Puppeteer Enablement
         uses: mujo-code/puppeteer-headful@12.3.1
