--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,8 +37,8 @@ jobs:
 
       - run: npm install --ignore-scripts
 
-      - name: Puppeteer Enablement
-        uses: mujo-code/puppeteer-headful@v2
+      # - name: Puppeteer Enablement
+      #   uses: mujo-code/puppeteer-headful@v2
 
       - name: End to End Test
         run: npm run test-e2e
