--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,25 +29,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
 
-      # - name: install puppeteer libraries
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y libgbm1
-      #     sudo sysctl -w kernel.unprivileged_userns_clone=1
-
       - run: npm install --ignore-scripts
 
-      - name: setup-chromedriver
-        uses: nanasess/setup-chromedriver@v1.0.7
+      # - name: setup-chromedriver
+      #   uses: nanasess/setup-chromedriver@v1.0.7
 
-      - run: |
+      - name: End to End Test
+        run: |
           export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
           npm run test-e2e
-
-      # - name: Puppeteer Enablement
-      #   uses: mujo-code/puppeteer-headful@v2
-
-      - name: End to End Test
-        run: npm run test-e2e
