--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,11 +31,9 @@ jobs:
 
       - run: npm install --ignore-scripts
 
-      # - name: setup-chromedriver
-      #   uses: nanasess/setup-chromedriver@v1.0.7
-
       - name: End to End Test
         run: |
+          # The next three lines are needed to get around the XDISPLAY issue Puppeteer will run into.
           export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
