--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,17 +22,19 @@ jobs:
         uses: actions/cache@v2
         id: npm-cache
         with:
-          path: | 
+          path: |
             ~/.npm
             ./node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
-      - run: npm ci --ignore-scripts
-
-      - name: Puppeteer Enablement
-        uses: mujo-code/puppeteer-headful@12.3.1
+      - run: npm install --ignore-scripts
 
       - name: End to End Test
-        run: npm run test-e2e
+        run: |
+          # The next three lines are needed to get around the XDISPLAY issue Puppeteer will run into.
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+          npm run test-e2e
