--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@typeform/embed-react": "^1.9.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
-    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "sass": "^1.49.9",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
